<resources>
    <string name="app_name">jabbertest</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Accounts -->
    <string name="account_one">phoneone@pimux.de</string>
    <string name="account_two">phonetwo@pimux.de</string>
    <string name="account_three">phonethree@pimux.de</string>
    <string name="account_four">phonefour@pimux.de</string>
    <string name="account_five">phonefive@pimux.de</string>
    <string name="account_six">phonesix@pimux.de</string>
    <string name="account_seven">phoneseven@pimux.de</string>
    <string name="account_eight">phoneeight@pimux.de</string>
</resources>